@@ -2043,8 +2043,9 @@ parse_cond_basic_auth (void *call_data, void *section_data)
 
   if ((tok = gettkn_expect (T_STRING)) == NULL)
     return CFGPARSER_FAIL;
-  locus_range_copy (&cond->pwfile.locus, &tok->locus);
-  cond->pwfile.filename = xstrdup (tok->str);
+  if (watcher_register (cond, tok->str, &tok->locus,
+			basic_auth_read, basic_auth_clear) == NULL)
+    return CFGPARSER_FAIL;
   return CFGPARSER_OK;
 }
 
@@ -5548,113 +5549,6 @@ service_finalize (SERVICE *svc, void *data)
   return 0;
 }
 
-/*
- * Fix-up password file structures for use in restricted chroot
- * environment.
- */
-static int
-cond_pass_file_fixup (SERVICE_COND *cond)
-{
-  int rc = 0;
-
-  switch (cond->type)
-    {
-    case COND_BASIC_AUTH:
-      if (cond->pwfile.filename[0] == '/')
-	{
-	  if (root_jail)
-	    {
-	      /* Split file name into directory and base name, */
-	      char *p = strrchr (cond->pwfile.filename, '/');
-	      if (p != NULL)
-		{
-		  char *dir = cond->pwfile.filename;
-		  *p++ = 0;
-		  cond->pwfile.filename = xstrdup (p);
-		  if ((cond->pwfile.wd = workdir_get (dir)) == NULL)
-		    {
-		      conf_error_at_locus_range (&cond->pwfile.locus,
-						 "can't open directory %s: %s",
-						 dir,
-						 strerror (errno));
-		      free (dir);
-		      rc = -1;
-		      break;
-		    }
-		  free (dir);
-		}
-	    }
-	}
-      else
-	{
-	  WORKDIR *wd = get_include_wd_at_locus_range (&cond->pwfile.locus);
-	  if (!wd)
-	    {
-	      rc = -1;
-	      break;
-	    }
-	  cond->pwfile.wd = workdir_ref (wd);
-	}
-      break;
-
-    case COND_BOOL:
-      {
-	SERVICE_COND *subcond;
-	SLIST_FOREACH (subcond, &cond->boolean.head, next)
-	  {
-	    if ((rc = cond_pass_file_fixup (subcond)) != 0)
-	      break;
-	  }
-      }
-      break;
-
-    default:
-      break;
-    }
-  return rc;
-}
-
-static int
-rule_pass_file_fixup (REWRITE_RULE *rule)
-{
-  int rc = 0;
-  do
-    {
-      if ((rc = cond_pass_file_fixup (&rule->cond)) != 0)
-	break;
-    }
-  while ((rule = rule->iffalse) != NULL);
-  return rc;
-}
-
-static int
-pass_file_fixup (REWRITE_RULE_HEAD *head)
-{
-  REWRITE_RULE *rule;
-  int rc = 0;
-
-  SLIST_FOREACH (rule, head, next)
-    {
-      if ((rc = rule_pass_file_fixup (rule)) != 0)
-	break;
-    }
-  return rc;
-}
-
-static int
-service_pass_file_fixup (SERVICE *svc, void *data)
-{
-  if (cond_pass_file_fixup (&svc->cond))
-    return -1;
-  return pass_file_fixup (&svc->rewrite[REWRITE_REQUEST]);
-}
-
-static int
-listener_pass_file_fixup (LISTENER *lstn, void *data)
-{
-  return pass_file_fixup (&lstn->rewrite[REWRITE_REQUEST]);
-}
-
 int
 parse_config_file (char const *file, int nosyslog)
 {
@@ -5700,10 +5594,6 @@ parse_config_file (char const *file, int nosyslog)
 	abend (NULL, "WorkerMinCount is greater than WorkerMaxCount");
       if (!nosyslog)
 	log_facility = pound_defaults.facility;
-
-      if (foreach_listener (listener_pass_file_fixup, NULL)
-	  || foreach_service (service_pass_file_fixup, NULL))
-	return -1;
     }
   named_backend_table_free (&pound_defaults.named_backend_table);
   cfgparser_finish (root_jail || daemonize);
